--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,6 +120,21 @@ input {
 	border-radius: 20px;
 }
 
+.modalscreen {
+	position: fixed;
+	width: 500px;
+	height: 500px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	z-index: 3;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	border-radius: 20px;
+}
+
 /*title*/
 
 
@@ -136,6 +151,14 @@ input {
 	font-weight: normal;
 	text-align: center;
 }
+.modal-title {
+	font-size: 90px;
+	margin-top: 110px;
+	color: rgba(0, 116, 238, 0.85);
+}
+
+
+
 
 .control-item1 {
 		width: 300px;
@@ -209,8 +232,7 @@ input {
     inset 2px 2px 8px rgba(0, 0, 0, 0.15);  
 }
 
-.button:hover span
-{
+.button:hover span {
     display: inline-block;
     transform: scale(0.98);
 }
@@ -248,6 +270,42 @@ input {
 }
 
 .button-okay:hover span
+{
+    display: inline-block;
+    transform: scale(0.98);
+}
+
+.button-start {
+	position: fixed;
+    display: inline-block;
+    align-items: center;
+    padding: 30px 0px;
+    margin-top: 300px;
+    margin-bottom: 30px;
+    cursor: pointer;
+    width: 300px;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 2px;
+    color: #5a84a2;
+    font-size: 18px;
+    border-radius: 40px;
+    box-shadow: -2px -2px 8px rgba(255, 255, 255, 1),
+    -2px -2px 12px rgba(255, 255, 255, 0.5),
+    inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+    2px 2px 8px rgba(0, 0, 0, 0.15);
+}
+
+.button-start:hover {
+	box-shadow: inset -2px -2px 8px rgba(255, 255, 255, 1),
+    inset -2px -2px 12px rgba(255, 255, 255, 0.5),
+    inset 2px 2px 4px rgba(255, 255, 255, 0.1),
+    inset 2px 2px 8px rgba(0, 0, 0, 0.15);  
+}
+
+.button-start:hover span
 {
     display: inline-block;
     transform: scale(0.98);
@@ -318,12 +376,21 @@ overlay=========*/
     	height: 400px;
 	}
 
+	.modalscreen {
+		width: 300px;
+		height: 400px;
+	}
+
 	.title {
 		font-size: 14px;
 		margin-bottom: 20px;
 		font-weight: normal;
 	}
 	.title-control {
+		font-size: 16px;
+		margin-bottom: 20px;
+	}
+	.titlecontrol {
 		font-size: 16px;
 		margin-bottom: 20px;
 	}
@@ -349,6 +416,9 @@ overlay=========*/
 		width: 200px;
 		padding: 20px 0px;
 		font-size: 14px;
+	}
+	.button-start {
+		width: 248px;
 	}
 	.control-items {
 		height: 300px;
@@ -401,9 +471,7 @@ overlay=========*/
 }
 
 @media (min-width: 768px) {
-	.controls {
-		opacity: 0;
-	}
+	
 }
 
 
