--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ input {
     display: inline-block;
     align-items: center;
     padding: 30px 0px;
-    margin-top: 90px;
+    margin-top: 25px;
     margin-bottom: 30px;
     cursor: pointer;
     width: 300px;
@@ -414,8 +414,10 @@ overlay=========*/
 	}
 	.button-okay {
 		width: 200px;
-		padding: 20px 0px;
-		font-size: 14px;
+    	padding: 20px 0px;
+    	font-size: 14px;
+    	position: fixed;
+    	margin-top: 315px;
 	}
 	.button-start {
 		width: 248px;
@@ -477,7 +479,15 @@ overlay=========*/
 }
 
 
-@media (min-width: 992px) {}
+@media (min-width: 992px) {
+	.controls {
+		display: none;
+	}
+}
 
 
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+	.controls {
+		display: none;
+	}
+}
